package at.spengergasse.IShop.domain;

public enum Category {
    TV,
    clothes,
    outdoor,
    business
}
